--- a/public/style/mordecai.css
+++ b/public/style/mordecai.css
@@ -1,14 +1,59 @@
+.tabletop {
+  display: flex;
+}
+
 .board {
-  width: 115px;
+  margin-right: 15px;
 }
 
 .row {
   display: flex;
+}
+
+/* Code Pegs */
+.code-pegs {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
-.hole {
-  width: 25px;
-  height: 25px;
+.code-peg-hole {
+  width: 26px;
+  height: 26px;
   border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+}
+
+.code-peg {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  border: 1px solid black;
+}
+
+.p-0.code-peg {
+  background-color: cyan;
+}
+
+.p-1.code-peg {
+  background-color: rebeccapurple;
+}
+
+.p-2.code-peg {
+  background-color: yellow;
+}
+
+.p-3.code-peg {
+  background-color: orange;
+}
+
+.p-4.code-peg {
+  background-color: saddlebrown;
+}
+
+.p-5.code-peg {
+  background-color: green;
 }
